custom-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-guestbook-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: custom-guestbook-ui
  template:
    metadata:
      labels:
        app: custom-guestbook-ui
    spec:
      containers:
        - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
          name: custom-guestbook-ui
          ports:
            - containerPort: 80
