custom-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-guestbook-ui
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: custom-guestbook-ui
