custom-app/route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: custom-guestbook-ui-route
  namespace: default
  labels:
    gateway: external-http
spec:
  parentRefs:
    - name: external-http
  rules:
    # - backendRefs:
    #     - group: net.gke.io
    #       kind: ServiceImport
    #       name: custom-guestbook-ui
    #       port: 80
    - backendRefs:
        - name: argo-rollouts-stable-service
          port: 80
        - name: argo-rollouts-canary-service
          port: 80
